--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "print-js": "^1.0.63",
     "pug": "^2.0.4"
   },
   "devDependencies": {
